[gd_scene load_steps=28 format=3 uid="uid://jnwyd45vvf66"]

[ext_resource type="Script" path="res://Scripts/ConfigManager.gd" id="1_n6noq"]
[ext_resource type="Script" path="res://Scripts/PopupManager.gd" id="1_nax6r"]
[ext_resource type="Script" path="res://Scripts/LoadConfig.gd" id="2_72syl"]
[ext_resource type="Script" path="res://Scripts/LoadDefaultConfig.gd" id="3_tem08"]
[ext_resource type="Script" path="res://Scripts/SaveConfig.gd" id="4_w02jb"]
[ext_resource type="Script" path="res://Scripts/ButtonSignalReceiver.gd" id="5_x3lx7"]
[ext_resource type="Script" path="res://Scripts/DependencyManager.gd" id="6_nyjvv"]
[ext_resource type="Theme" uid="uid://npsys71erk22" path="res://Styles Popup Window/PopupMenu.tres" id="7_pwah2"]
[ext_resource type="Texture2D" uid="uid://dbfyhoxow1dvx" path="res://Sprites/WindowBorder.png" id="8_yw34i"]
[ext_resource type="Texture2D" uid="uid://7xlw7muxppnq" path="res://Sprites/WindowBorder2.png" id="9_1yutt"]
[ext_resource type="Texture2D" uid="uid://b4dy3pe5sxpoe" path="res://Sprites/WindowClose.png" id="10_6r6wl"]
[ext_resource type="Script" path="res://Scripts/CloseWindow.gd" id="11_8k5x0"]
[ext_resource type="Texture2D" uid="uid://dvdp55wfyfnqd" path="res://Sprites/Border.png" id="12_ha6qu"]
[ext_resource type="StyleBox" uid="uid://4l8mmmx7u3qw" path="res://Styles Popup Window/DropdownStyle.tres" id="13_vq30m"]
[ext_resource type="Texture2D" uid="uid://d25o7fuik0h20" path="res://Sprites/UpDown.png" id="14_d1vkh"]
[ext_resource type="Script" path="res://Scripts/OpenFileDialog.gd" id="15_1426b"]

[sub_resource type="Theme" id="Theme_cmocx"]
MarginContainer/constants/margin_bottom = 0
MarginContainer/constants/margin_left = 3
MarginContainer/constants/margin_right = 3
MarginContainer/constants/margin_top = 3

[sub_resource type="Theme" id="Theme_q1g54"]
MarginContainer/constants/margin_bottom = 0
MarginContainer/constants/margin_left = 4
MarginContainer/constants/margin_right = 0
MarginContainer/constants/margin_top = 0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bglpd"]

[sub_resource type="Theme" id="Theme_g05jl"]
Label/styles/normal = SubResource("StyleBoxEmpty_bglpd")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_mlega"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xgv7d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6lonk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h1inq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xw2vr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aaf83"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gqn3f"]

[node name="OptionsWindow" type="Window"]
canvas_item_default_texture_filter = 0
initial_position = 1
title = "Redguard Options"
size = Vector2i(500, 375)
exclusive = true
unresizable = true
always_on_top = true
script = ExtResource("1_nax6r")

[node name="ConfigManager" type="Node" parent="." node_paths=PackedStringArray("windowModeDropdown", "vsyncCheckbox", "limitFPSCheckbox", "maxFPSSpinbox", "antiAliasingCheckbox", "shadowsCheckbox", "musicSlider", "effectsSlider", "voicesSlider", "subtitlesCheckbox", "autodefendCheckbox", "redguardPathLineEdit")]
unique_name_in_owner = true
script = ExtResource("1_n6noq")
windowModeDropdown = NodePath("../Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Display/Display Options Margin/Display Options/Window Mode")
vsyncCheckbox = NodePath("../Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Display/Display Options Margin/Display Options/VSync")
limitFPSCheckbox = NodePath("../Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Display/Display Options Margin/Display Options/FPSLimit Parent/FPSLimit")
maxFPSSpinbox = NodePath("../Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Display/Display Options Margin/Display Options/FPSLimit Parent/maxFPS")
antiAliasingCheckbox = NodePath("../Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Graphics/Graphics Options Margin/Graphics Options/AntiAliasing")
shadowsCheckbox = NodePath("../Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Graphics/Graphics Options Margin/Graphics Options/Shadows")
musicSlider = NodePath("../Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Audio/Audio Options Margin/Audio Options/Music Volume Slider")
effectsSlider = NodePath("../Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Audio/Audio Options Margin/Audio Options/Effects Volume Slider")
voicesSlider = NodePath("../Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Audio/Audio Options Margin/Audio Options/Voices Volume Slider")
subtitlesCheckbox = NodePath("../Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Gameplay/Gameplay Options Margin/Gameplay Options/Subtitles")
autodefendCheckbox = NodePath("../Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Gameplay/Gameplay Options Margin/Gameplay Options/Auto-Defend")
redguardPathLineEdit = NodePath("../Window/Window Contents Margin/Window Contents/Path bar/LineEdit")

[node name="ConfigLoader" type="Node" parent="ConfigManager"]
unique_name_in_owner = true
script = ExtResource("2_72syl")

[node name="DefaultConfigLoader" type="Node" parent="ConfigManager"]
unique_name_in_owner = true
script = ExtResource("3_tem08")

[node name="ConfigSaver" type="Node" parent="ConfigManager"]
unique_name_in_owner = true
script = ExtResource("4_w02jb")

[node name="ButtonSignalReceiver" type="Node" parent="ConfigManager"]
script = ExtResource("5_x3lx7")

[node name="DependencyManager" type="Node" parent="ConfigManager"]
unique_name_in_owner = true
script = ExtResource("6_nyjvv")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_pwah2")
texture = ExtResource("8_yw34i")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
metadata/_edit_use_anchors_ = true

[node name="Window" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("7_pwah2")

[node name="Title Bar (obsolete)" type="MarginContainer" parent="Window"]
visible = false
layout_mode = 2
theme = SubResource("Theme_cmocx")

[node name="Blue Background" type="NinePatchRect" parent="Window/Title Bar (obsolete)"]
layout_mode = 2
texture = ExtResource("9_1yutt")
region_rect = Rect2(6, 7, 3, 11)
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="TitleAndClose" type="HBoxContainer" parent="Window/Title Bar (obsolete)"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Window/Title Bar (obsolete)/TitleAndClose"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_q1g54")

[node name="Redguard Options" type="Label" parent="Window/Title Bar (obsolete)/TitleAndClose/MarginContainer2"]
layout_mode = 2
theme = SubResource("Theme_g05jl")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Redguard Options"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Window/Title Bar (obsolete)/TitleAndClose"]
layout_mode = 2

[node name="Close Button" type="TextureButton" parent="Window/Title Bar (obsolete)/TitleAndClose/MarginContainer"]
layout_mode = 2
texture_normal = ExtResource("10_6r6wl")
stretch_mode = 3
script = ExtResource("11_8k5x0")

[node name="Window Contents Margin" type="MarginContainer" parent="Window"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
metadata/_edit_use_anchors_ = true

[node name="Window Contents" type="VBoxContainer" parent="Window/Window Contents Margin"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Settings Area" type="HBoxContainer" parent="Window/Window Contents Margin/Window Contents"]
layout_mode = 2
size_flags_vertical = 3

[node name="Left Panel" type="VBoxContainer" parent="Window/Window Contents Margin/Window Contents/Settings Area"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Display" type="PanelContainer" parent="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Display Background Margin" type="MarginContainer" parent="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Display"]
layout_mode = 2
theme_override_constants/margin_top = 11

[node name="Background" type="NinePatchRect" parent="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Display/Display Background Margin"]
material = SubResource("CanvasItemMaterial_mlega")
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("12_ha6qu")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Display Options Margin" type="MarginContainer" parent="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Display"]
layout_mode = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 2

[node name="Display Options" type="VBoxContainer" parent="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Display/Display Options Margin"]
layout_mode = 2

[node name="Display header" type="Label" parent="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Display/Display Options Margin/Display Options"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = " Display "
vertical_alignment = 1

[node name="Window Mode" type="OptionButton" parent="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Display/Display Options Margin/Display Options"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/focus = ExtResource("13_vq30m")
theme_override_styles/normal = ExtResource("13_vq30m")
theme_override_styles/hover = ExtResource("13_vq30m")
theme_override_styles/pressed = ExtResource("13_vq30m")
theme_override_styles/disabled = ExtResource("13_vq30m")
item_count = 4
selected = 0
popup/item_0/text = "ExclusiveFullScreen"
popup/item_0/id = 0
popup/item_1/text = "FullScreenWindow"
popup/item_1/id = 1
popup/item_2/text = "MaximizedWindow"
popup/item_2/id = 2
popup/item_3/text = "Windowed"
popup/item_3/id = 3

[node name="VSync" type="CheckBox" parent="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Display/Display Options Margin/Display Options"]
layout_mode = 2
focus_mode = 0
theme_override_constants/check_v_offset = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_xgv7d")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6lonk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_h1inq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xw2vr")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_aaf83")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gqn3f")
text = "V-Sync"

[node name="FPSLimit Parent" type="HBoxContainer" parent="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Display/Display Options Margin/Display Options"]
layout_mode = 2

[node name="FPSLimit" type="CheckBox" parent="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Display/Display Options Margin/Display Options/FPSLimit Parent"]
layout_mode = 2
focus_mode = 0
theme_override_constants/check_v_offset = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_xgv7d")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6lonk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_h1inq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xw2vr")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_aaf83")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gqn3f")
text = "Frame Rate Limit"

[node name="Spacer" type="Control" parent="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Display/Display Options Margin/Display Options/FPSLimit Parent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="maxFPS" type="SpinBox" parent="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Display/Display Options Margin/Display Options/FPSLimit Parent"]
layout_mode = 2
theme_override_icons/updown = ExtResource("14_d1vkh")
value = 55.0
rounded = true
update_on_text_changed = true

[node name="Graphics" type="PanelContainer" parent="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Graphics Background Margin" type="MarginContainer" parent="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Graphics"]
layout_mode = 2
theme_override_constants/margin_top = 11

[node name="Background" type="NinePatchRect" parent="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Graphics/Graphics Background Margin"]
material = SubResource("CanvasItemMaterial_mlega")
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("12_ha6qu")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Graphics Options Margin" type="MarginContainer" parent="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Graphics"]
layout_mode = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 2

[node name="Graphics Options" type="VBoxContainer" parent="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Graphics/Graphics Options Margin"]
layout_mode = 2

[node name="Graphics header" type="Label" parent="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Graphics/Graphics Options Margin/Graphics Options"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = " Graphics "
vertical_alignment = 1

[node name="AntiAliasing" type="CheckBox" parent="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Graphics/Graphics Options Margin/Graphics Options"]
layout_mode = 2
focus_mode = 0
theme_override_constants/check_v_offset = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_xgv7d")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6lonk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_h1inq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xw2vr")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_aaf83")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gqn3f")
text = "Anti-Aliasing (FXAA)"

[node name="Shadows" type="CheckBox" parent="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Graphics/Graphics Options Margin/Graphics Options"]
layout_mode = 2
focus_mode = 0
theme_override_constants/check_v_offset = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_xgv7d")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6lonk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_h1inq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xw2vr")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_aaf83")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gqn3f")
text = "Shadows"

[node name="Right Panel" type="VBoxContainer" parent="Window/Window Contents Margin/Window Contents/Settings Area"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Audio" type="PanelContainer" parent="Window/Window Contents Margin/Window Contents/Settings Area/Right Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Audio Background Margin" type="MarginContainer" parent="Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Audio"]
layout_mode = 2
theme_override_constants/margin_top = 11

[node name="Background" type="NinePatchRect" parent="Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Audio/Audio Background Margin"]
material = SubResource("CanvasItemMaterial_mlega")
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("12_ha6qu")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Audio Options Margin" type="MarginContainer" parent="Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Audio"]
layout_mode = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 2

[node name="Audio Options" type="VBoxContainer" parent="Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Audio/Audio Options Margin"]
layout_mode = 2

[node name="Audio header" type="Label" parent="Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Audio/Audio Options Margin/Audio Options"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = " Audio "
vertical_alignment = 1

[node name="Music" type="Label" parent="Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Audio/Audio Options Margin/Audio Options"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Music"
vertical_alignment = 1

[node name="Music Volume Slider" type="HSlider" parent="Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Audio/Audio Options Margin/Audio Options"]
layout_mode = 2

[node name="Effects" type="Label" parent="Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Audio/Audio Options Margin/Audio Options"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Effects"
vertical_alignment = 1

[node name="Effects Volume Slider" type="HSlider" parent="Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Audio/Audio Options Margin/Audio Options"]
layout_mode = 2

[node name="Voices" type="Label" parent="Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Audio/Audio Options Margin/Audio Options"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Voices"
vertical_alignment = 1

[node name="Voices Volume Slider" type="HSlider" parent="Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Audio/Audio Options Margin/Audio Options"]
layout_mode = 2

[node name="Gameplay" type="PanelContainer" parent="Window/Window Contents Margin/Window Contents/Settings Area/Right Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Gameplay Background Margin" type="MarginContainer" parent="Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Gameplay"]
layout_mode = 2
theme_override_constants/margin_top = 11

[node name="Background" type="NinePatchRect" parent="Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Gameplay/Gameplay Background Margin"]
material = SubResource("CanvasItemMaterial_mlega")
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("12_ha6qu")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Gameplay Options Margin" type="MarginContainer" parent="Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Gameplay"]
layout_mode = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 2

[node name="Gameplay Options" type="VBoxContainer" parent="Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Gameplay/Gameplay Options Margin"]
layout_mode = 2

[node name="Gameplay header" type="Label" parent="Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Gameplay/Gameplay Options Margin/Gameplay Options"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = " Gameplay "
vertical_alignment = 1

[node name="Subtitles" type="CheckBox" parent="Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Gameplay/Gameplay Options Margin/Gameplay Options"]
layout_mode = 2
focus_mode = 0
theme_override_constants/check_v_offset = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_xgv7d")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6lonk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_h1inq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xw2vr")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_aaf83")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gqn3f")
text = "Subtitles"

[node name="Auto-Defend" type="CheckBox" parent="Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Gameplay/Gameplay Options Margin/Gameplay Options"]
layout_mode = 2
focus_mode = 0
theme_override_constants/check_v_offset = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_xgv7d")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6lonk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_h1inq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xw2vr")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_aaf83")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gqn3f")
text = "Auto-Defend"

[node name="Modern Controls" type="CheckBox" parent="Window/Window Contents Margin/Window Contents/Settings Area/Right Panel/Gameplay/Gameplay Options Margin/Gameplay Options"]
visible = false
layout_mode = 2
focus_mode = 0
theme_override_constants/check_v_offset = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_xgv7d")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6lonk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_h1inq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xw2vr")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_aaf83")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gqn3f")
text = "Modern Controls"

[node name="Path bar" type="HBoxContainer" parent="Window/Window Contents Margin/Window Contents" node_paths=PackedStringArray("fileDialog", "lineEdit")]
layout_mode = 2
theme_override_constants/separation = 7
script = ExtResource("15_1426b")
fileDialog = NodePath("../../../../NativeFileDialog")
lineEdit = NodePath("LineEdit")

[node name="Label" type="Label" parent="Window/Window Contents Margin/Window Contents/Path bar"]
layout_mode = 2
text = "Redguard Path:"
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Window/Window Contents Margin/Window Contents/Path bar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_placeholder_color = Color(0.478431, 0.478431, 0.478431, 1)
placeholder_text = " The folder containing REDGUARD.EXE"
caret_blink = true
caret_blink_interval = 0.5

[node name="SelectPath" type="Button" parent="Window/Window Contents Margin/Window Contents/Path bar"]
layout_mode = 2
text = " ... "

[node name="Button Bar" type="HBoxContainer" parent="Window/Window Contents Margin/Window Contents"]
layout_mode = 2

[node name="Defaults" type="Button" parent="Window/Window Contents Margin/Window Contents/Button Bar"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
focus_mode = 0
text = "Defaults"

[node name="Spacer" type="Control" parent="Window/Window Contents Margin/Window Contents/Button Bar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Cancel" type="Button" parent="Window/Window Contents Margin/Window Contents/Button Bar"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
focus_mode = 0
text = "Cancel"

[node name="Ok" type="Button" parent="Window/Window Contents Margin/Window Contents/Button Bar"]
custom_minimum_size = Vector2(96, 23)
layout_mode = 2
focus_mode = 0
text = "Ok"

[node name="NativeFileDialog" type="NativeFileDialog" parent="."]
title = "Open a Directory"
file_mode = 2
access = 2
unique_name_in_owner = true

[connection signal="about_to_popup" from="." to="ConfigManager" method="_on_options_window_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Display/Display Options Margin/Display Options/VSync" to="ConfigManager/ButtonSignalReceiver" method="_on_v_sync_pressed"]
[connection signal="pressed" from="Window/Window Contents Margin/Window Contents/Settings Area/Left Panel/Display/Display Options Margin/Display Options/FPSLimit Parent/FPSLimit" to="ConfigManager/ButtonSignalReceiver" method="_on_fps_limit_pressed"]
[connection signal="pressed" from="Window/Window Contents Margin/Window Contents/Path bar/SelectPath" to="Window/Window Contents Margin/Window Contents/Path bar" method="_on_select_path_pressed"]
[connection signal="pressed" from="Window/Window Contents Margin/Window Contents/Button Bar/Defaults" to="ConfigManager/ButtonSignalReceiver" method="_on_defaults_pressed"]
[connection signal="pressed" from="Window/Window Contents Margin/Window Contents/Button Bar/Cancel" to="ConfigManager/ButtonSignalReceiver" method="_on_cancel_pressed"]
[connection signal="pressed" from="Window/Window Contents Margin/Window Contents/Button Bar/Ok" to="ConfigManager/ButtonSignalReceiver" method="_on_ok_pressed"]
